--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -2,7 +2,7 @@
 
 .hero {
   width: 100%;
-  background-image: url('../../images/bg-curvy-desktop.svg');
+  // background-image: url('../../images/bg-curvy-desktop.svg');
   background-position: bottom;
   background-size: 100% auto;
   background-repeat: no-repeat;
