--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -1,34 +1,45 @@
 @use '../utils/' as *;
 
 .button {
+  --blue-250: linear-gradient(#8ADAE3);
   @include button;
-  color: $color-white;
-  background-image: $gradient;
+  background-image: linear-gradient(135deg, #63E1D9, #34A0CD);
+  color: #fff;
+  border: none;
 
   padding: var(--spacing-200) var(--spacing-1000);
-
-  border: none;
-  border-radius: px-to-rem(24);
-
+  border-radius: px-to-rem(28);
   cursor: pointer;
 
-  &::before {
+  /* To position pseudo element */
+  position: relative;
+  /* To position correctly we will use flex layout */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &::after {
     content: '';
     position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
-    background: $blue-250;
-    z-index: -1;
+    // Must be same as we will hide pseudo element behind the button
+    border-radius: px-to-rem(28);
     opacity: 0;
-    transition: opacity 0.3s ease;
+    /* to display linear-gradient we use background-image property */
+    background-image: var(--blue-250);
+    /* To place it behind the button */
+    z-index: -1;
+    // for opacity transition, so we can have smooth transition effect
+    transition: opacity 0.3s ease-in;
   }
 
-  &:hover::before,
-  &:focus::before {
+  &:hover::after,
+  &:focus::after {
     opacity: 1;
   }
 
+  &:hover {
+    z-index: 0;
+  }
 }
-
