--- a/scss/components/_features.scss
+++ b/scss/components/_features.scss
@@ -1,1 +1,84 @@
 @use '../utils/' as *;
+
+.features {
+  max-width: px-to-rem(907);
+  margin-inline: auto;
+
+  margin-bottom: px-to-rem(140);
+
+  @include respond-to(md) {
+    margin-bottom: px-to-rem(150);
+  }
+
+  @include respond-to(lg) {
+    margin-bottom: px-to-rem(146);
+  }
+
+
+  &__grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(px-to-rem(290), 1fr));
+    row-gap: var(--spacing-1000);
+    column-gap: var(--spacing-200);
+
+    @include respond-to(md) {
+      row-gap: var(--spacing-900);
+      column-gap: var(--spacing-1000);
+    }
+
+    @include respond-to(md) {
+      row-gap: var(--spacing-1000);
+      column-gap: var(--spacing-1350);
+    }
+  }
+
+  &__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: var(--spacing-300);
+
+    @include respond-to(md) {
+      gap: var(--spacing-200);
+
+      &:nth-child(3){
+        grid-column: 2/ 3;
+        grid-row: 1 / 2;
+      }
+
+       &:nth-child(2){
+        grid-column: 1/ 2;
+        grid-row: 2 / 3;
+      }
+    }
+
+
+
+  }
+
+  &__icon-container {
+    display: flex;
+    justify-content: center; // Horizontal centering
+    align-items: center;
+    width: clamp(5rem, 3.928571428571429rem + 5.357142857142857vw, 6.5rem);
+    height: clamp(5rem, 3.928571428571429rem + 5.357142857142857vw, 6.5rem);
+  }
+
+  &__icon {
+    max-width: 90%;
+    max-height: 90%;
+  }
+
+  &__title {
+    @include features__title;
+    margin-bottom: var(--spacing-100);
+    // text-align: center;
+  }
+
+  &__description {
+    @include features__text;
+    // text-align: center;
+  }
+
+}
