--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -6,6 +6,9 @@
 @forward 'header';
 @forward 'hero';
 @forward 'features';
+@forward 'productive';
+@forward 'testimonials';
+// @forward 'cta';
 
 
 // Components
