--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -8,9 +8,9 @@
 @forward 'features';
 @forward 'productive';
 @forward 'testimonials';
-// @forward 'cta';
+@forward 'cta';
 
 
 // Components
 @forward 'button';
-@forward 'card';
+@forward 'card'; 
