--- a/scss/utils/_colors.scss
+++ b/scss/utils/_colors.scss
@@ -2,7 +2,7 @@
 $color-white: hsl(0, 0%, 100%);
 $color-black: hsl(0, 0%, 0%);
 $color-grey: hsl(0, 0%, 75%);
-$color-red: hsl(0, 100%, 63%);
+$color-error: hsl(0, 100%, 63%);
 
 $navy-950: hsl(216, 53%, 9%);
 $navy-900: hsl(218, 28%, 13%);
