--- a/scss/components/_cta.scss
+++ b/scss/components/_cta.scss
@@ -5,7 +5,8 @@
   background-color: $navy-850;
   margin-inline: auto;
   box-shadow: 2px 10px 20px rgba(0, 0, 0, 0.2);
-
+  position: relative;
+  z-index: 2;
 
   @include respond-to(md) {
     width: clamp(30rem, 2.642857142857146rem + 56.99404761904761vw, 53.9375rem);
