--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,12 +1,14 @@
 @use '../utils/' as *;
 
 .header {
-  margin-bottom: var(--spacing-300);
+  margin-top: clamp(1.5rem, 0.5rem + 5vw, 5rem);
+  
+  margin-bottom: var(--spacing-600);
 
   @include respond-to(md) {
     margin-bottom: var(--spacing-1050);
   }
-
+  
   @include respond-to(lg) {
     margin-bottom: var(--spacing-800);
   }
@@ -18,15 +20,17 @@
   }
 
   &__logo {
-    width: clamp(5rem, 3.2857142857142856rem + 8.571428571428571vw, 11rem);
+    width: clamp(5rem, 3.2857142857rem + 8.5714285714vw, 11rem);
   }
 
   &__list {
     display: flex;
-    gap: clamp(1.5rem, 0.9285714285714286rem + 2.857142857142857vw, 3.5rem);
+    gap: clamp(1.5rem, 0.9285714286rem + 2.8571428571vw, 3.5rem);
   }
 
   &__link {
+    color: #fff;
     @include link;
   }
+
 }
