--- a/scss/utils/_typography.scss
+++ b/scss/utils/_typography.scss
@@ -98,12 +98,16 @@ $ls-lg: 0.5px;
   font-family: $font-primary;
   font-size: 0.75rem;
   font-size: clamp(0.75rem, 0.67rem + 0.35vw, 1rem);
-
+  letter-spacing: 0.02em; // added to create a bit more spacing between letters due to hover effect
+  font-weight: 400;
   color: #fff;
+  transition: font-weight 150ms ease, letter-spacing 150ms ease;
+
 
   &:hover,
   &:focus {
     font-weight: 700;
+    letter-spacing: 0;
   }
 }
 
