--- a/scss/components/_cta.scss
+++ b/scss/components/_cta.scss
@@ -1,5 +1,96 @@
 @use '../utils/' as *;
 
 .cta {
+  --max-content-width:#{px-to-rem(863)};
   background-color: $navy-900;
+
+  &__container {
+    background-color: $navy-850;
+    box-shadow: 3px 10px 15px rgba(0, 0, 0, 0.2);
+    border-radius: px-to-rem(8);
+    padding: var(--spacing-300) var(--spacing-500);
+
+    position: relative;
+    z-index: 2;
+
+    @include respond-to(md) {
+      padding: var(--spacing-500) var(--spacing-600);
+    }
+
+    @include respond-to(lg) {
+      padding: var(--spacing-1000) var(--spacing-600);
+    }
+  }
+
+  &__content {
+    text-align: center;
+  }
+
+  &__title {
+    @include cta__title;
+  }
+
+  &__text {
+    @include features__text;
+    margin-top: var(--spacing-300);
+    margin-bottom: var(--spacing-400);
+  }
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: var(--spacing-300);
+
+    @include respond-to(md) {
+      gap: var(--spacing-200);
+    }
+
+    @include respond-to(lg) {
+      flex-direction: row;
+      align-items: start;
+      gap: var(--spacing-300);
+
+    }
+  }
+
+  &__group {
+    width: 100%;
+
+    @include respond-to(md) {
+      max-width: 30rem;
+    }
+  }
+
+  &__input {
+    padding: var(--spacing-150) var(--spacing-200);
+    border-radius: 1.5rem;
+    height: 3rem;
+    border: none;
+    width: 100%;
+
+    &::placeholder {
+      color: hsl(0, 0%, 75%);
+      text-align: center;
+    }
+  }
+
+  .button--cta {
+    width: 100%;
+
+    @include respond-to(lg) {
+      width: 12.5rem;
+      padding-inline: var(--spacing-300);
+    }
+  }
+
+  &__error-msg.js-warning {
+    font-family: "Open Sans", sans-serif;
+    font-size: 0.75rem;
+    color: hsl(0, 100%, 63%);
+    margin-top: var(--spacing-50);
+    padding-left: px-to-rem(2);
+    text-align: start;
+  }
+
 }
