--- a/scss/base/_default.scss
+++ b/scss/base/_default.scss
@@ -16,7 +16,7 @@ html {
   box-sizing: inherit;
   margin: 0;
   padding: 0;
-  outline: 1px solid olive; // For accessibility reasons
+  // outline: 1px solid olive; // For debugging reason
 }
 
 body {
